--- a/templates/main.html
+++ b/templates/main.html
@@ -45,7 +45,7 @@
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="http://sledhoops.net/blog">Blog</a></li>
-            <li><a href="#headtohead">Head to Head</a></li>
+            <li><a href="{{ url_for('headtohead') }}">Head to Head</a></li>
             <li><a href="#detailedstats">Detailed Stats</a></li>
 
           </ul>
@@ -59,7 +59,7 @@
       <div class="jumbotron">
         <h1>Welcome to SLED Hoops!</h1>
         <p>Welcome to the SLED: Stednick Logsdon Expected Difference. A computational knowledge engine for NCAA basketball.</p>
-        <p><a href="#" class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
+        <p><a href="#" class="btn btn-primary btn-lg" role="button">Learn more</a></p>
       </div>
     </div>
       <div class="col-xs-6">
