stylized version of head to head

--- a/templates/main.html
+++ b/templates/main.html
@@ -70,6 +70,7 @@
                 <th>Home Team</th>
                 <th>Away Team</th>
                 <th>Differential</th>
+                <th>SLED</th>
               </tr>
             </thead>
             <tbody>
@@ -78,6 +79,7 @@
                 <td>{{ entry.TeamHome }}</td>
                 <td>{{ entry.TeamAway }}</td>
                 <td>{{ entry.spread }}</td>
+                <td>{{ entry.SLED }}</td>
               </tr>
               {% endfor %}
             </tbody>
