--- a/templates/results.html
+++ b/templates/results.html
@@ -1,10 +1,82 @@
-{% extends "layout.html" %}
+{%extends "layout.html" %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
+
+    <title>SLED Hoops</title>
+
+    <!-- Bootstrap core CSS -->
+    <!-- link href="/css/bootstrap.min.css" rel="stylesheet" -->
+    <!-- Bootstrap theme -->
+    <!-- link href="/css/bootstrap-theme.min.css" rel="stylesheet"-->
+
+    <!-- Custom styles for this template -->
+    <!-- link href="theme.css" rel="stylesheet" -->
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
 {% block body %}
-<h1>Current Prediction</h1>
-<table>
-  <tr><td><b>Home</td><td><b>Away</td><td>Prediction</td></tr>
-  {% for entry in entries %}
-    <tr><td>{{ home[0].teamName }}</td><td>{{ away[0].teamName}}</td><td>{{ entry.Predicted }}</td></tr>
-  {% endfor %}
-</table>
-{% endblock %}
+
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">SLED Hoops</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="{{ url_for('main') }}">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="http://sledhoops.net/blog">Blog</a></li>
+            <li><a href="{{ url_for('headtohead') }}">Head to Head</a></li>
+            <li><a href="#detailedstats">Detailed Stats</a></li>
+
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+    <div class="container theme-showcase" role="main">
+      <br></br>
+      <br></br>
+    </div>
+      <div class="col-lg-3">
+          <table class="table table-striped">
+            <thead>
+                <tr><td><b>Home</td><td><b>Away</td><td><b>Prediction</td></tr>
+                      <tbody>
+                  {% for entry in entries %}
+                    <tr><td>{{ home[0].teamName }}</td><td>{{ away[0].teamName}}</td><td>{{ entry.Predicted }}</td></tr>
+                  {% endfor %}
+                    </tbody>
+             </table>
+
+          {% endblock %}
+
+    </div> <!-- /container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+  </body>
+</html>
