--- a/templates/results.html
+++ b/templates/results.html
@@ -62,8 +62,10 @@
             <thead>
                 <tr><td><b>Home</td><td><b>Away</td><td><b>Prediction</td></tr>
                       <tbody>
+                      <tr><td><img src="10.png">
+                          <td><img src="1176.png"></tr>
                   {% for entry in entries %}
-                    <tr><td>{{ home[0].teamName }}</td><td>{{ away[0].teamName}}</td><td>{{ entry.Predicted }}</td></tr>
+                    <tr><td>{{ home[0].teamName }}</td><td>{{ away[0].teamName}}</td><td>{{ entry.Prediction }}</td></tr>
                   {% endfor %}
                     </tbody>
              </table>
