--- a/templates/main.html
+++ b/templates/main.html
@@ -43,7 +43,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="{{ url_for('about') }}">About</a></li>
             <li><a href="http://sledhoops.net/blog">Blog</a></li>
             <li><a href="{{ url_for('headtohead') }}">Head to Head</a></li>
             <li><a href="#detailedstats">Detailed Stats</a></li>
