--- a/templates/main.html
+++ b/templates/main.html
@@ -89,7 +89,7 @@
       <div class="col-xs-6">
       <h2 class="sub-header">Yesterday's Results</h2>
       <div class="table-responsive">
-          <table class="table table-striped">
+          <table class="table">
             <thead>
               <tr>
                 <th>Home Team</th>
@@ -125,6 +125,9 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script>
+      $('tr:has(td:contains("SLED"))').addClass('success');
+    </script>
   </body>
 </html>
 {% endblock %}
