danger class for the losses

--- a/templates/main.html
+++ b/templates/main.html
@@ -127,6 +127,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <script>
       $('tr:has(td:contains("SLED"))').addClass('success');
+      $('tr:has(td:contains("Spread"))').addClass('danger');
     </script>
   </body>
 </html>
