now showing sled score

--- a/templates/main.html
+++ b/templates/main.html
@@ -58,8 +58,7 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
         <h1>Welcome to SLED Hoops!</h1>
-        <p>Welcome to the SLED: Stednick Logsdon Expected Difference. A computational knowledge engine for NCAA basketball.</p>
-        <p><a href="#" class="btn btn-primary btn-lg" role="button">Learn more</a></p>
+        <p>Welcome to the SLED: Stednick Logsdon Expected Difference. The NCAA basketball predictions you can't get anywhere else.</p>
       </div>
     </div>
       <div class="col-xs-6">
@@ -79,7 +78,7 @@
                 <td>{{ entry.TeamHome }}</td>
                 <td>{{ entry.TeamAway }}</td>
                 <td>{{ entry.spread }}</td>
-                <td>{{ entry.SLED }}</td>
+                <td>{{ entry.Predicted }}</td>
               </tr>
               {% endfor %}
             </tbody>
