--- a/templates/about.html
+++ b/templates/about.html
@@ -11,19 +11,6 @@
 
     <title>SLED Hoops</title>
 
-    <!-- Bootstrap core CSS -->
-    <!-- link href="/css/bootstrap.min.css" rel="stylesheet" -->
-    <!-- Bootstrap theme -->
-    <!-- link href="/css/bootstrap-theme.min.css" rel="stylesheet"-->
-
-    <!-- Custom styles for this template -->
-    <!-- link href="theme.css" rel="stylesheet" -->
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
 
 {% block body %}
@@ -46,6 +33,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="http://sledhoops.net/blog">Blog</a></li>
             <li><a href="{{ url_for('headtohead') }}">Head to Head</a></li>
+            <li><a href="{{ url_for('rankings') }}">Rankings</a></li>
             <li><a href="#detailedstats">Detailed Stats</a></li>
 
           </ul>
