--- a/templates/about.html
+++ b/templates/about.html
@@ -40,12 +40,14 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-
     <div class="container theme-showcase" role="main">
-      <br></br>
-      <br></br>
-    </div>
+        <div class="jumbotron">
+          <p>
+          <p>SLED or "Stednick Logsdon Expected Difference" is an analytic tool for NCAA Men's basketball. Using a prorietary alogrithm we attempt to rank each of the 350 NCAA D1 men's teams and pass those results to you.</p>
+</div>
 
+
+    <div class="container">
     <div class="col-lg-3">
       <table class="table table-striped">
         <thead>
