minor fix, better flow to about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -31,7 +31,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="{{ url_for('main') }}">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="http://sledhoops.net/blog">Blog</a></li>
+            <li><a href="http://blog.sledhoops.net">Blog</a></li>
             <li><a href="{{ url_for('headtohead') }}">Head to Head</a></li>
             <li><a href="{{ url_for('rankings') }}">Rankings</a></li>
             <li><a href="#detailedstats">Detailed Stats</a></li>
@@ -43,7 +43,7 @@
     <div class="container theme-showcase" role="main">
         <div class="jumbotron">
           <p>
-          <p>SLED or "Stednick Logsdon Expected Difference" is an analytic tool for NCAA Men's basketball. Using a prorietary alogrithm we attempt to rank each of the 350 NCAA D1 men's teams and pass those results to you.</p>
+          <p>SLED or "Stednick Logsdon Expected Difference" is an analytic tool for NCAA Men's basketball. Using a proprietary alogrithm we attempt to rank each of the 350 NCAA D1 men's teams and pass those results to you.</p>
 </div>
 
 
