--- a/templates/rankings.html
+++ b/templates/rankings.html
@@ -29,9 +29,9 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="{{ url_for('main') }}">Home</a></li>
             <li><a href="{{ url_for('about') }}">About</a></li>
-            <li><a href="http://sledhoops.net/blog">Blog</a></li>
+            <li><a href="http://blog.sledhoops.net">Blog</a></li>
             <li><a href="{{ url_for('headtohead') }}">Head to Head</a></li>
             <li><a href="{{ url_for('rankings') }}">Rankings</a></li>
             <li><a href="#detailedstats">Detailed Stats</a></li>
