google tracking code and D3 plots

--- a/templates/about.html
+++ b/templates/about.html
@@ -43,11 +43,16 @@
     <div class="container theme-showcase" role="main">
         <div class="jumbotron">
           <p>
-          <p>SLED or "Stednick Logsdon Expected Difference" is an analytic tool for NCAA Men's basketball. Using a proprietary alogrithm we attempt to rank each of the 350 NCAA D1 men's teams and pass those results to you.</p>
+          <p>SLED or "Stednick Logsdon Expected Difference" is an analytic tool for NCAA Men's basketball.
+          Using a proprietary algorithm we attempt to rank each of the 350 NCAA D1 men's teams and pass those results to you.
+          The below figure shows our accuracy against the spread over the course of the season.</p>
 </div>
 
+      <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="SLEDaccuracy.html"></iframe>
+        </div>
 
-    <div class="container">
+<div class="container">
     <div class="col-lg-3">
       <table class="table table-striped">
         <thead>
