--- a/templates/about.html
+++ b/templates/about.html
@@ -29,8 +29,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{{ url_for('main') }}">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="{{ url_for('main') }}">Home</a></li>
+            <li class="active"><a href="#about">About</a></li>
             <li><a href="http://blog.sledhoops.net">Blog</a></li>
             <li><a href="{{ url_for('headtohead') }}">Head to Head</a></li>
             <li><a href="{{ url_for('rankings') }}">Rankings</a></li>
