--- a/templates/headtohead.html
+++ b/templates/headtohead.html
@@ -42,10 +42,10 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{{ url_for('main') }}">Home</a></li>
+            <li><a href="{{ url_for('main') }}">Home</a></li>
             <li><a href="{{ url_for('about') }}">About</a></li>
             <li><a href="http://sledhoops.net/blog">Blog</a></li>
-            <li><a href="{{ url_for('headtohead') }}">Head to Head</a></li>
+            <li class="active"><a href="{{ url_for('headtohead') }}">Head to Head</a></li>
             <li><a href="#detailedstats">Detailed Stats</a></li>
 
           </ul>
@@ -83,10 +83,6 @@
 
     </div> <!-- /container -->
 
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
   </body>
