--- a/templates/results.html
+++ b/templates/results.html
@@ -34,7 +34,7 @@
             <li><a href="http://sledhoops.net/blog">Blog</a></li>
             <li class="active"><a href="{{ url_for('headtohead') }}">Head to Head</a></li>
             <li><a href="{{ url_for('rankings') }}">Rankings</a></li>
-            <li><a href="#detailedstats">Detailed Stats</a></li>
+            <li><a href="{{ url_for('detailedstats') }}">Detailed Stats</a></li>
 
           </ul>
         </div><!--/.nav-collapse -->
