--- a/templates/conference.html
+++ b/templates/conference.html
@@ -26,16 +26,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">SLED Hoops</a>
+          <a class="navbar-brand" href="{{ url_for('main') }}">SLED Hoops</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li><a href="{{ url_for('main') }}">Home</a></li>
             <li><a href="{{ url_for('about') }}">About</a></li>
             <li><a href="http://blog.sledhoops.net/">Blog</a></li>
             <li><a href="{{ url_for('headtohead') }}">Head to Head</a></li>
             <li><a href="{{ url_for('rankings') }}">Rankings</a></li>
-            <li><a href="{{ url_for('detailedstats') }}">Detailed Stats</a></li>
+            <li class="active"><a href="{{ url_for('detailedstats') }}">Detailed Stats</a></li>
 
           </ul>
         </div><!--/.nav-collapse -->
