--- a/templates/headtohead.html
+++ b/templates/headtohead.html
@@ -38,7 +38,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">SLED Hoops</a>
+          <a class="navbar-brand" href="{{ url_for('main') }}">SLED Hoops</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
