Adding enough styling to actually see and interact with the page.

--- a/templates/headtohead.html
+++ b/templates/headtohead.html
@@ -60,15 +60,20 @@
         <div ng-controller="HeadToHead">
           <div class="container theme-showcase" role="main">
             <div class="row">
-              <div class="col-xs-4">
+              <div class="col-xs-6">
+                <h4>Home</h4>
+              </div>
+              <div class="col-xs-6">
+                <h4>Away</h4>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-6">
                 <div class="form-group">
                   <input type="text" id="homeTypeahead" class="typeahead form-control" />
                 </div>
               </div>
-              <div class="col-xs-2">
-                <span>@</span>
-              </div>
-              <div class="col-xs-4">
+              <div class="col-xs-6">
                 <div class="form-group">
                   <input type="text" id="awayTypeahead" class="typeahead form-control" />
                 </div>
