minor fix in description

--- a/templates/headtohead.html
+++ b/templates/headtohead.html
@@ -67,7 +67,7 @@
               </div>
             </div>
             <div class="row">
-              <b> The SLED predicts the Home team will win by:</b>
+              <b> The SLED predicted outcome is:</b>
               <span class="col-xs-12">
                 <b>  {{ line }} </b>
                 </span>
